Component rendering correctly with webpack

--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "name": "react-time-range",
   "version": "1.0.0",
   "description": "A flexible time range selector for React",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch",
+    "build": "webpack -p"
+  },
+  "author": "Peter Joseph",
+  "babel": {
+    "presets": [
+      "env"
+    ],
+    "plugins": [
+      "transform-object-rest-spread",
+      "transform-react-jsx",
+      "transform-class-properties"
+    ]
   },
   "repository": {
     "type": "git",
@@ -18,18 +31,28 @@
     "timepicker",
     "date"
   ],
-  "author": "Peter Joseph",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/withpeterjoseph/react-time-range/issues"
   },
   "homepage": "https://github.com/withpeterjoseph/react-time-range#readme",
-  "devDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
-  },
   "dependencies": {
-    "babel-runtime": "6.x",
-    "moment": "2.x"
+    "css-loader": "^0.28.9",
+    "file-loader": "^1.1.6",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "style-loader": "^0.20.1",
+    "webpack": "^3.11.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "eslint-plugin-class-property": "^1.1.0"
   }
 }
