--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-    "osx": {
-        "command": "./node_modules/.bin/eslint"
-    },
-    "extends": "standard",
-    "isShellCommand": true,
-    "args": ["*.js"],
-    "showOutput": "silent",
-    "problemMatcher": "$eslint-stylish"
+    "extends": "standard"
 }
