--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-    "extends": "standard"
+  "extends": "standard",
+  "rules": {
+    "quotes": [2, "double"],
+    "semi": [1, "always"],
+    "space-before-function-paren": [1, "never"]
+  }
 }
