Changed licence to MIT

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "timepicker",
     "date"
   ],
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/peterjoseph/react-time-range/issues"
   },
